# velodyne_lidar_detection

src/arc_detector_node/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/arc_detector_node/arc_detector_node/: arc_detector_node.py
src/arc_detector_node/msg/: PartialArc.msg
src/filter_node/: package.xml  setup.cfg  setup.py
src/filter_node/filter_node/: filter_node.py
